# Real-Time-Fraud-Detection-Platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.streaming.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
docs/: architecture.md
fraud_platform/: __init__.py  config.py  logging_config.py
fraud_platform/dashboard/: app.py
fraud_platform/data/: generate_synthetic.py  validate.py
fraud_platform/features/: __init__.py  engineering.py
fraud_platform/serving/: app.py  model.py  schemas.py
fraud_platform/streaming/: producer.py  spark_stream.py
fraud_platform/training/: train.py
notebooks/: eda.ipynb  eda.py
scripts/: build_report.py  download_data.py  run_streaming_pipeline.sh
tests/: test_config.py  test_data_and_model.py  test_download.py  test_features.py  test_validate.py
